Fixed overlapping register page on 1366x768 screens

--- a/css/login.css
+++ b/css/login.css
@@ -98,6 +98,7 @@ html,
 }
 
 .login-card-container{
+    margin-top: 4em;
     width: 100%;
     display: flex;
     justify-content: center;
